Fixed polls not resizing to 100% on small screen

--- a/Pollster_Node/public/main.css
+++ b/Pollster_Node/public/main.css
@@ -476,6 +476,7 @@ float:left;
 @media only screen and (max-width: 650px) {
     /* For mobile phones: */
     #polls{
+        animation:none;
 		width:100%;
 		height:30%;
 	}
